// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobDetailsTooltipComponent should display FLSA, Job Category and Scope when current job is Payfactors 1`] = `
<pf-job-details-tooltip
  job={[Function Object]}
  jobDescriptionElement={[Function ElementRef]}
  tooltipElement={[Function ElementRef]}
  tooltipMargin={[Function Number]}
  tooltipPadding={[Function Number]}
>
  <div
    class="tooltip-container"
    style="visibility: hidden;"
  >
    <div
      class="d-flex"
    >
      <div
        class="mr-auto pr-2"
      >
        <h5>
          Accountant II (1002)
        </h5>
      </div>
      <div
        data-toggle="tooltip"
        title="Copy Job Description"
      >
        <i
          aria-hidden="true"
          class="fa fa-clipboard"
        />
      </div>
    </div>
    <div>
      <span
        class="pr-2"
      >
        <strong>
          Family: 
        </strong>
        Accounting
      </span>
      <span
        class="pr-2"
      >
        <strong>
          Level: 
        </strong>
        I
      </span>
      
      <span>
        <strong>
          FLSA: 
        </strong>
        Typically Exempt
      </span>
    </div>
    
    <div>
      <strong>
        Job Category: 
      </strong>
      Professional 
    </div>
    <p
      class="mt-3"
    >
      <strong>
        Source: 
      </strong>
      Payfactors 
      
       effective July 1, 2018 
    </p>
    
    <p>
      <strong>
        Scope: 
      </strong>
      Boston - MA 
    </p>
    <div
      class="job-description"
    >
      Job Summary: Prepares, analyzes, and reviews financial statements using accounting principles.
       Job Duties: Keeps records of account entries by compiling and analyzing accounting activities.
       Prepares reports such as balance sheets, profit and loss statements,
       and other documents that project the organization's financial position.
       Reviews financial statements for completeness, accuracy, and compliance.
       Oversees accounting operations, or a complex segment of the accounting function.
       Coordinates accounting matters with other departments. Experience and Education:
       Performs work under general supervision. Handles moderately complex issues and problems,
       and refers more complex issues to higher-level staff. Possesses solid working knowledge of subject matter.
       May provide leadership, coaching, and/or mentoring to a subordinate group.
       Typically requires a Bachelor's degree and 2 to 4 years of experience. May require a CPA.
       Reports to: Typically reports to a department head or manager. Competencies: Analytical skills.
       Problem-solving. Ability to work within a team.
    </div>
  </div>
</pf-job-details-tooltip>
`;

exports[`JobDetailsTooltipComponent should display Survey Name when current job is not Payfactors and Survey Name is not empty 1`] = `
<pf-job-details-tooltip
  job={[Function Object]}
  jobDescriptionElement={[Function ElementRef]}
  tooltipElement={[Function ElementRef]}
  tooltipMargin={[Function Number]}
  tooltipPadding={[Function Number]}
>
  <div
    class="tooltip-container"
    style="visibility: hidden;"
  >
    <div
      class="d-flex"
    >
      <div
        class="mr-auto pr-2"
      >
        <h5>
          Blend of Gas Operations Top Executive-Corporate, G (13001)
        </h5>
      </div>
      <div
        data-toggle="tooltip"
        title="Copy Job Description"
      >
        <i
          aria-hidden="true"
          class="fa fa-clipboard"
        />
      </div>
    </div>
    <div>
      <span
        class="pr-2"
      >
        <strong>
          Family: 
        </strong>
        Accounting
      </span>
      <span
        class="pr-2"
      >
        <strong>
          Level: 
        </strong>
        I
      </span>
      
    </div>
    
    <p
      class="mt-3"
    >
      <strong>
        Source: 
      </strong>
      Hewitt Associates 
      
      <span>
        - TCM Executive Long Term Incentives Total Compensation by Industry
      </span>
       effective April 1, 2010 
    </p>
    
    <div
      class="job-description"
    >
      Job Description: Accountant
    </div>
  </div>
</pf-job-details-tooltip>
`;
